kubernetes/apps/default/forgejo/app/gitlab-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-mtls-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-mtls-proxy
  template:
    metadata:
      labels:
        app: gitlab-mtls-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: server-certs
              mountPath: /certs
            - name: client-certs
              mountPath: /client-certs
      volumes:
        - name: config
          configMap:
            name: gitlab-mtls-proxy
        - name: server-certs
          secret:
            secretName: gitlab-mtls-proxy-tls
        - name: client-certs
          secret:
            secretName: forgejo-gitlab-mirror-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-proxy
spec:
  selector:
    app: gitlab-mtls-proxy
  ports:
    - port: 443
      targetPort: 443
